--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'main/base.html' %}
+
+{% block title %}
+    {{ title }}
+{% endblock %}
+
+{% block header %}
+    {{ header }}
+{% endblock %}
+
+{% block body %}
+    {% if tasks %}
+        {% for task in tasks %}
+            <div class="alert alert-primary" role="alert">
+                <div class="input-group mb-3">
+                    <div class="input-group-text">
+                        <input class="form-check-input" type="checkbox" value="" aria-label="Checkbox for following text input">
+                    </div>
+                    <input disabled="disabled" type="text" value="{{ task.title }}" class="form-control" aria-label="Text input with checkbox">
+                </div>
+                <p> {{ task.description }}</p>
+            </div>
+        {% endfor %}
+    {% else %}
+        <div class="alert alert-warning" role="alert">
+            <p> You have not added task yet :( </p>
+        </div>
+    {% endif %}
+{% endblock %}
