--- a/main/templates/main/contacts.html
+++ b/main/templates/main/contacts.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'main/base.html' %}
+
+{% block title %}
+My contacts
+{% endblock %}
+
+{% block header %}
+My contacts
+{% endblock %}
+
+{% block body %}
+    <p>
+        <a href="t.me/kolyanpwnz">Telegram</a>
+    </p>
+{% endblock %}
+
