--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -20,6 +20,9 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'task' %}">Create task</a>
             </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'post' %}">Posts</a>
+            </li>
           </ul>
         </div>
       </div>
